--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>Bayford Suites offers premium accommodation with world-class amenities, located in the prestigious
                     Wuse 2 district. Your comfort is our priority.</p>
                 <div class="hero-btns">
-                    <a href="booking.php" class="btn">Book Your Stay</a>
+                    <a href="booking.php" class="btn">Book Your Experience</a>
                     <a href="#rooms" class="btn btn-secondary">View Rooms</a>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                     <div class="room-content">
                         <h3 class="room-title">Deluxe Room</h3>
                         <div class="room-price">₦80,000 <span>/ night</span></div>
-                        <p>Spacious accommodation with separate living area, perfect for business travelers or families.
+                        <p>Spacious accommodation perfect for business travelers or families.
                         </p>
                         <!-- <div class="room-features">
                             <div class="feature"><i class="fas fa-user-friends"></i> 3 Guests</div>
@@ -106,7 +106,7 @@
                 <!-- Superior Deluxe Room -->
                 <div class="room-card fade-in">
                     <div class="room-img">
-                        <img src="Images/Superior Deluxe 1.jpg" alt="Superior Deluxe Room">
+                        <img src="Images/Superior Deluxe 4.jpg" alt="Superior Deluxe Room">
                     </div>
                     <div class="room-content">
                         <h3 class="room-title">Superior Deluxe Room</h3>
@@ -213,29 +213,29 @@
                     <p>Stay connected with complimentary high-speed internet access throughout the hotel.</p>
                 </div>
 
-                <div class="amenity-card fade-in">
+                <!-- <div class="amenity-card fade-in">
                     <div class="amenity-icon">
                         <i class="fas fa-swimming-pool"></i>
                     </div>
                     <h3>Swimming Pool</h3>
                     <p>Relax by our temperature-controlled outdoor pool with panoramic city views.</p>
-                </div>
+                </div> -->
 
-                <div class="amenity-card fade-in">
+                <!-- <div class="amenity-card fade-in">
                     <div class="amenity-icon">
                         <i class="fas fa-dumbbell"></i>
                     </div>
                     <h3>Fitness Center</h3>
                     <p>Maintain your workout routine in our fully-equipped, 24/7 fitness facility.</p>
-                </div>
+                </div> -->
 
-                <div class="amenity-card fade-in">
+                <!-- <div class="amenity-card fade-in">
                     <div class="amenity-icon">
                         <i class="fas fa-concierge-bell"></i>
                     </div>
                     <h3>24/7 Concierge</h3>
                     <p>Our dedicated staff is available around the clock to assist with all your needs.</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
