--- a/index.html
+++ b/index.html
@@ -204,22 +204,22 @@
                 </div>
 
                 <!-- Event Hall -->
-                <div class="room-card fade-in">
+                <!-- <div class="room-card fade-in">
                     <div class="room-img">
                         <img src="Images/Lobby 2.jpg" alt="Event Hall">
                     </div>
                     <div class="room-content">
                         <h3 class="room-title">Event Hall</h3>
                         <div class="room-price">₦500,000 <span>/ day</span></div>
-                        <p>A spacious and elegant hall perfect for weddings, conferences, banquets, and other special events.</p>
+                        <p>A spacious and elegant hall perfect for weddings, conferences, banquets, and other special events.</p> -->
                         <!-- <div class="room-features">
                             <div class="feature"><i class="fas fa-users"></i> Up to 300 Guests</div>
                             <div class="feature"><i class="fas fa-microphone"></i> A/V Equipment</div>
                             <div class="feature"><i class="fas fa-glass-cheers"></i> Catering Available</div>
                         </div> -->
-                        <a href="booking.php" class="btn" style="width: 100%; text-align: center;">Book Now</a>
+                        <!-- <a href="booking.php" class="btn" style="width: 100%; text-align: center;">Book Now</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
